--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,84 @@
+# === OS-generated files ===
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Created by https://www.gitignore.io/api/macos,linux,windows,vapor
-
-### Linux ###
+# === IDE & Editor files ===
+# VS Code
+.vscode/
+*.swp
+*.swo
 *~
 
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
+# PyCharm
+.idea/
+*.iml
 
-# KDE directory preferences
-.directory
+# === Language-specific ===
 
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pip-log.txt
+pip-delete-this-directory.txt
+.pytype/
+.coverage
 
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
-### macOS ###
-*.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-### Vapor ###
-Config/secrets
-
-### Vapor Patch ###
-Packages
-.build
-xcuserdata
-*.xcodeproj
-
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-.git/credentials
-
-cobertura.xml
-# End of https://www.gitignore.io/api/macos,linux,windows,vapor
-
-
+# Node.js
 node_modules/
-*.swp
-yarn-error.log
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 .pnp.*
-.idea
+
+# === Environment Variables ===
+# NEVER COMMIT YOUR API KEYS OR SECRETS!
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# === Logs ===
+logs/
+*.log
+npm-debug.log*
+
+# === Runtime data ===
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# === Dependency directories ===
+# These are installed by `npm install` or `pip install -r requirements.txt`
+# They can be rebuilt, so don't store them in git.
+node_modules/
+jspm_packages/
+
+# === Build outputs ===
+dist/
+build/
+*.tgz
+*.tar.gz
+
+# === Docker ===
+# Ignore stuff related to running containers, not the Dockerfiles themselves
+docker-compose.override.yml
+
+# === Machine-specific configs ===
+.venv/
+.venv*/
