--- a/.github/workflows/update-templates.yml
+++ b/.github/workflows/update-templates.yml
@@ -1,29 +1,84 @@
-name: Update Templates
+# === OS-generated files ===
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-on:
-  workflow_dispatch:
+# === IDE & Editor files ===
+# VS Code
+.vscode/
+*.swp
+*.swo
+*~
 
+# PyCharm
+.idea/
+*.iml
 
-jobs:
-  build:
+# === Language-specific ===
 
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pip-log.txt
+pip-delete-this-directory.txt
+.pytype/
+.coverage
 
-    steps:
-    - uses: actions/checkout@v3
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnp.*
 
-    - name: Sync Templates
-      run: |
-        git submodule update --init
-        cd gitignore
-        git pull origin master
+# === Environment Variables ===
+# NEVER COMMIT YOUR API KEYS OR SECRETS!
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: Sync Templates Submodule
-        title: Sync Templates Submodule
-        branch: sync_templates
-        base: master
+# === Logs ===
+logs/
+*.log
+npm-debug.log*
+
+# === Runtime data ===
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# === Dependency directories ===
+# These are installed by `npm install` or `pip install -r requirements.txt`
+# They can be rebuilt, so don't store them in git.
+node_modules/
+jspm_packages/
+
+# === Build outputs ===
+dist/
+build/
+*.tgz
+*.tar.gz
+
+# === Docker ===
+# Ignore stuff related to running containers, not the Dockerfiles themselves
+docker-compose.override.yml
+
+# === Machine-specific configs ===
+.venv/
+.venv*/
